services/nexus/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-external
spec:
  ports:
  - port: 80
    name: web
  type: ExternalName
  externalName: nexus.docker.internal
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: nexus3
  name: nexus3
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nexus.k8s.internal`)
      services:
        - name: nexus-external
          port: 80
