services/nexus/nexus-helmchart.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nexus3
  labels:
    app: nexus3
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`nexus.k8s.internal`)
      services:
        - name: nexus3
          port: 8081
      middlewares:
        - name: secured
          namespace: kube-system
